[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
bevy = "0.14"
bevy-inspector-egui = {version="0.25.1", optional = true}
bevy_ecs_ldtk = {version="0.10.0", features=["atlas"]}
bevy_ecs_tilemap="0.14.0"
bevy_light_2d = "0.2.1"
bevy_ui = { version = "0.14.0", features = ["bevy_text"] }
ldtk_rust = "0.6.0"
log = "0.4.22"
serde_json = "1.0.120"
thiserror = "1.0.63"


[features]
inspector=["dep:bevy-inspector-egui"]
